--- a/TP3/config-git-repo/inventory-service.properties
+++ b/TP3/config-git-repo/inventory-service.properties
@@ -1,6 +1,9 @@
 customer.params.x=01
 customer.params.y=02
 
+spring.datasource.url=jdbc:h2:mem:inventory-db
+spring.h2.console.enabled=true
+
 spring.cloud.discovery.enabled=true
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.instance.prefer-ip-address=true
