--- a/TP5/billing-service/src/main/resources/application.properties
+++ b/TP5/billing-service/src/main/resources/application.properties
@@ -3,3 +3,6 @@ server.port=8083
 
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/ecom-realm
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8080/realms/ecom-realm/protocol/openid-connect/certs
+
+spring.cloud.discovery.enabled=false
+spring.cloud.config.enabled=false
