--- a/TP5/customer-service/src/main/resources/application.properties
+++ b/TP5/customer-service/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.h2.console.enabled=true
 
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/ecom-realm
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8080/realms/ecom-realm/protocol/openid-connect/certs
+spring.cloud.discovery.enabled=false
+spring.cloud.config.enabled=false
