--- a/TP5/inventory-service/src/main/resources/application.properties
+++ b/TP5/inventory-service/src/main/resources/application.properties
@@ -3,3 +3,5 @@ server.port=8082
 
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/ecom-realm
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8080/realms/ecom-realm/protocol/openid-connect/certs
+spring.cloud.discovery.enabled=false
+spring.cloud.config.enabled=false
